Fix explore-more class left align

--- a/sass/juice.scss
+++ b/sass/juice.scss
@@ -73,7 +73,6 @@ header {
   .explore-more {
     position: absolute;
     bottom: 20px;
-    left: 45%;
     cursor: pointer;
   }
 }
